--- a/views/symptoms.view.html
+++ b/views/symptoms.view.html
@@ -1,9 +1,14 @@
 <div>
     <form>
-        <label for="">Name</label>
-        <input type="text" id="displayName" value="${this.context.displayName}"/>
-        <label for="">Phone</label>
-        <input type="text" id="phoneNumber" value="${this.context.phoneNumber}"/>
-        <a class="waves-effect waves-light btn" onclick="router('profile','update')">Update</a>
+        <label for="">A</label>
+        <input type="text" id="a" value="${this.context.a}"/>
+        <label for="">B</label>
+        <input type="text" id="b" value="${this.context.b}"/>
+        <label for="">C</label>
+        <input type="text" id="c" value="${this.context.c}"/>
+        <label for="">D</label>
+        <input type="text" id="d" value="${this.context.d}"/>
+
+        <a class="waves-effect waves-light btn" onclick="router('symptomes','update')">Update</a>
     </form>
 </div>
